--- a/gb/3/11/12/n410210.md
+++ b/gb/3/11/12/n410210.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tcdmcc359/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/tcdmcc359/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/tcdmcc359/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tcdmcc359/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/tcdmcc359/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tcdmcc359/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/tcdmcc359/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tcdmcc359/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/tcdmcc359/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tcdmcc359/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/tcdmcc359/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tcdmcc359/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/tcdmcc359/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tcdmcc359/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/tcdmcc359/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tcdmcc359/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/tcdmcc359/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/tcdmcc359/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/tcdmcc359/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/tcdmcc359/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tcdmcc359/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/tcdmcc359/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tcdmcc359/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tcdmcc359/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tcdmcc359/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tcdmcc359/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tcdmcc359/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tcdmcc359/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tcdmcc359/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tcdmcc359/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tcdmcc359/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tcdmcc359/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tcdmcc359/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/tcdmcc359/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tcdmcc359/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tcdmcc359/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tcdmcc359/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tcdmcc359/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tcdmcc359/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tcdmcc359/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tcdmcc359/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tcdmcc359/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tcdmcc359/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/tcdmcc359/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tcdmcc359/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tcdmcc359/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tcdmcc359/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/auytan380/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/auytan380/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/auytan380/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/auytan380/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/auytan380/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/auytan380/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/auytan380/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/auytan380/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/auytan380/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>路易十四与卢浮宫、凡尔赛宫</h2>
 
 <h6></h6>
 <hr>
 	<p>【大纪元11月12日讯】在法国历史上，路易十四世国王是在位最长久的君王之一，五岁登基，统治法国长达六十二年，直到一七一五年去世为止。在他治下，法国国运昌盛，文艺活动鼎盛，堪称法国黄金时代。出现了“路易十四时代”，被法国著名的启蒙思想家伏尔泰称为人类历史上四个崇高伟大，堪称后世典范的时代之一。圣君路易十四被人尊称为“太阳王”。 </p>
 <p>路易十四的时代是欧洲发展史上的一个关键时期，尤其在艺术和世风这两方面，以惊人的速度完成了从野蛮到文明，从粗陋到优雅的演化。受益的范围，不仅是整个法国，而是整个欧洲，甚至遥远的俄罗斯。文艺复兴只使意大利变得文雅，而路易十四时代却从根本上改变了西方世界。 </p>
-<p>这个时代的繁荣给了艺术一个强劲的推动力，使之蓬勃发展，成为社会中变化最快最大的因素之一。绘画、雕塑、音乐、戏剧、舞蹈等艺术的革命，都是在法国完成的。<br />期间建造完成的卢浮<ahref="https://github.com/tcdmcc359/djy/blob/master/gb/tag/%E5%AE%AB.md#1">宫</a>、凡尔赛宫堪称世界文化的瑰宝。</p>
-<p>（一）艺术圣殿卢浮<ahref="https://github.com/tcdmcc359/djy/blob/master/gb/tag/%E5%AE%AB.md#1">宫</a> </p>
+<p>这个时代的繁荣给了艺术一个强劲的推动力，使之蓬勃发展，成为社会中变化最快最大的因素之一。绘画、雕塑、音乐、戏剧、舞蹈等艺术的革命，都是在法国完成的。<br />期间建造完成的卢浮<ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E5%AE%AB.md#1">宫</a>、凡尔赛宫堪称世界文化的瑰宝。</p>
+<p>（一）艺术圣殿卢浮<ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E5%AE%AB.md#1">宫</a> </p>
 <p>艺术圣殿卢浮宫是座深灰色建筑，是路易十四时代的皇宫，1973年法国国民议会决定将其改为国立美术馆。它最初的藏品只有162件，拿破仑时期，从许多国家掠夺过来大量名贵艺术品：土耳其、埃及珍贵的古物，罗马教皇及其名贵的雕刻、绘画，都以“战利品”搜罗进去，其艺术品收藏之丰堪称世界之冠。 </p>
 <p>卢浮宫共收藏艺术品４０万件，其中油画６０００件，素描１０万件，东方艺术珍品８万件，古希腊、古罗马艺术品３万件。 </p>
 <p>目前，卢浮宫整个建筑群和广场及草坪总共占地45公顷，展厅面积大约为138000平方米，卢浮宫收藏了人类艺术古代部分的精华，有着“人类文明发展的总索引”之誉。 </p>
@@ -29,41 +29,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/tcdmcc359/djy/blob/master/gb/3/11/8/n407599.md#1">俄欧首脑谈尤科斯事件</a></li>
-<li><a href="https://github.com/tcdmcc359/djy/blob/master/gb/3/11/8/n407745.md#1">前苏联国庆日俄各政党纷办活动为选举造势</a></li>
-<li><a href="https://github.com/tcdmcc359/djy/blob/master/gb/3/11/9/n408169.md#1">俄各派开动议会竞选机器</a></li>
-<li><a href="https://github.com/tcdmcc359/djy/blob/master/gb/3/11/10/n408364.md#1">成语故事　 病入膏肓</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/3/11/8/n407599.md#1">俄欧首脑谈尤科斯事件</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/3/11/8/n407745.md#1">前苏联国庆日俄各政党纷办活动为选举造势</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/3/11/9/n408169.md#1">俄各派开动议会竞选机器</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/3/11/10/n408364.md#1">成语故事　 病入膏肓</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/16/n10147874.md#1" target="_blank">“一打三反”运动：文革中血腥的一幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/30/n10679081.md#1" target="_blank">《求救信》获墨西哥电影节纪录片评委大奖</a></li>
+<li><a href="https://github.com/ychojm359/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/23/n10995753.md#1" target="_blank">九州：注定失败的共产主义</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/11/n11315892.md#1" target="_blank">河北一位电器维修师无悔的信念</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/tcdmcc359/djy/blob/master/gb/21/10/1/n13275161.md#1">【百年真相】耀眼明星的陨落 上官云珠坠楼真相</a></li>
-<li><a href="https://github.com/tcdmcc359/djy/blob/master/gb/21/10/7/n13289075.md#1">【百年真相】 骇世惊俗的告白 瞿秋白《多余的话》</a></li>
-<li><a href="https://github.com/tcdmcc359/djy/blob/master/gb/21/9/30/n13272470.md#1">璎珞：自佛国而来，尘世间最美的项链</a></li>
-<li><a href="https://github.com/tcdmcc359/djy/blob/master/gb/21/10/1/n13275150.md#1">【未解之谜】轮回记忆揭秘 考古界未解难题</a></li>
-<li><a href="https://github.com/tcdmcc359/djy/blob/master/gb/21/10/4/n13281280.md#1">无神论统御的基督教王国</a></li>
-<li><a href="https://github.com/tcdmcc359/djy/blob/master/gb/21/10/8/n13291720.md#1">【远见快评】长津湖掀文字狱 中共两大谎言</a></li>
-<li><a href="https://github.com/tcdmcc359/djy/blob/master/gb/21/10/9/n13291946.md#1">车评：双马达混能 2021 Toyota RAV4 Hybrid Limited</a></li>
-<li><a href="https://github.com/tcdmcc359/djy/blob/master/gb/21/10/8/n13291460.md#1">【拍案惊奇】习对台军事加压？CIA招中文特工</a></li>
-<li><a href="https://github.com/tcdmcc359/djy/blob/master/gb/21/10/7/n13286747.md#1">【独家】十一急电泄中共准备处置突发疫情</a></li>
-<li><a href="https://github.com/tcdmcc359/djy/blob/master/gb/21/10/7/n13287990.md#1">【中国观察】北京是否将要重返毛时代</a></li>
-<li><a href="https://github.com/tcdmcc359/djy/blob/master/gb/21/10/7/n13288961.md#1">与杨洁篪会谈六小时后 沙利文首发声</a></li>
-<li><a href="https://github.com/tcdmcc359/djy/blob/master/gb/21/10/6/n13286296.md#1">为何愿意前夫带儿子？赵丽颖录节目尴尬回应</a></li>
-<li><a href="https://github.com/tcdmcc359/djy/blob/master/gb/21/10/7/n13289044.md#1">被封杀42天动向成谜 赵薇现踪林心如IG</a></li>
-<li><a href="https://github.com/tcdmcc359/djy/blob/master/gb/21/10/8/n13291772.md#1">罹患直肠癌挺过51次化疗 余苑绮近照曝光</a></li>
-<li><a href="https://github.com/tcdmcc359/djy/blob/master/gb/21/10/8/n13291507.md#1">范冰冰站C位看时装秀 获设计师好友发文感谢</a></li>
-<li><a href="https://github.com/tcdmcc359/djy/blob/master/gb/21/10/8/n13291633.md#1">朱孝天怀疑与妻都曾染疫 自曝两年来收入微薄</a></li>
-<li><a href="https://github.com/tcdmcc359/djy/blob/master/gb/21/10/8/n13289897.md#1">消防队员援救峭壁上的“女人” 结局很意外</a></li>
-<li><a href="https://github.com/tcdmcc359/djy/blob/master/gb/21/10/1/n13274124.md#1">90%以上的病自己会好？提升自愈力有1个关键</a></li>
-<li><a href="https://github.com/tcdmcc359/djy/blob/master/gb/21/10/8/n13290207.md#1">在内蒙古草原点外送要等4小时 跑腿费用惊人</a></li>
-<li><a href="https://github.com/tcdmcc359/djy/blob/master/gb/21/10/7/n13287053.md#1">致癌、有毒或无效 哪些干洗手液上了“黑名单”？</a></li>
-<li><a href="https://github.com/tcdmcc359/djy/blob/master/gb/21/10/9/n13292597.md#1">美军传奇狙击手 独自爬行几天去歼灭北越将军</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752508.md#1">【唐瑞讲故事】睡美人</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752277.md#1">【马克时空】预警机、侦察机扮奇兵 助乌军精准打击俄军</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752411.md#1">【时事军事】苏-35S被米格-29击落 刺痛了谁？</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751784.md#1">中国最富城市之一深圳降薪 钱荒引爆民怨</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751624.md#1">中共吹嘘“最大常规航母” 分析：美国早已淘汰</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751705.md#1">外交人事洗牌 杨洁篪王毅继任人选引猜测</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751310.md#1">张娜拉6月底结婚 赞新郎笑容美好且诚实善良</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/2/n13751191.md#1">客串韩剧下周播 范冰冰晒运动瘦身照宣传造势</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/1/n13750249.md#1">长白发原因不一定是衰老！2种方法白发变黑发</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751309.md#1">研究发现人类肝脏永远年轻 只有不到三岁</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tcdmcc359/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tcdmcc359/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/3/11/12/n410210.htm">路易十四与卢浮宫、凡尔赛宫</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/auytan380/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/auytan380/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/3/11/12/n410210.htm">路易十四与卢浮宫、凡尔赛宫</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/tcdmcc359/djy/blob/master/gb/3/11/12/n410210.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tcdmcc359/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcdmcc359/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tcdmcc359/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tcdmcc359/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tcdmcc359/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcdmcc359/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tcdmcc359/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcdmcc359/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tcdmcc359/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcdmcc359/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tcdmcc359/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcdmcc359/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tcdmcc359/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcdmcc359/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tcdmcc359/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcdmcc359/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tcdmcc359/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcdmcc359/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/tcdmcc359/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcdmcc359/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tcdmcc359/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcdmcc359/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tcdmcc359/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcdmcc359/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/tcdmcc359/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcdmcc359/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tcdmcc359/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcdmcc359/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tcdmcc359/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcdmcc359/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tcdmcc359/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcdmcc359/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tcdmcc359/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcdmcc359/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tcdmcc359/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcdmcc359/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tcdmcc359/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcdmcc359/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tcdmcc359/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcdmcc359/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tcdmcc359/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcdmcc359/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tcdmcc359/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcdmcc359/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tcdmcc359/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcdmcc359/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tcdmcc359/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcdmcc359/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/auytan380/djy/blob/master/gb/3/11/12/n410210.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/auytan380/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/auytan380/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/auytan380/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
